[Java] prepare java benchmark for experiments